# song-selector

./: .gitignore  LICENSE  README.md  pyproject.toml  subset_sum_stats.csv
song_selector_algorithm/: __init__.py  main.py  subset_sum_stats.csv
song_selector_algorithm/common/: __init__.py  decorators.py  logger.py  snippets.py
song_selector_algorithm/core/: __init__.py  song_selector.py  subset_sum_solver.py
tests/: test_song_selector_algorithm.py
tests/data/: songs.csv  subset_sum_stats.csv
